Backend/src/main/java/Reservista/example/Backend/Error/CancellationExceptionHandler.java
package Reservista.example.Backend.Error;

public class CancellationExceptionHandler extends Exception{

    public CancellationExceptionHandler(String message){
        super(message);
    }

}
